--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,6 +1,14 @@
-<% @channels.each do |channel| %>
-  <div class="channel">
-    <h2><%= channel.title %></h2>
-    <h3><%= channel.channel_id %></h3>
-  </div>
+<div class="d-flex">
+  <%= render SulViewComponent::Elements::HeadingComponent.new(level: :h3, text: 'DLSS Channels', classes: 'mb-4 w-100 text-nowrap') %>
+</div>
+
+<%= render SulViewComponent::Elements::Tables::TableComponent.new(
+      id: 'channels', label: 'Channels', show_label: false
+    ) do |component| %>
+  <% component.with_header(
+       headers: ['Title', 'Channel ID', 'Last modified', 'Last refreshed']
+     ) %>
+  <% @channels.each do |channel| %>
+    <% component.with_row(values: [channel.title, channel.channel_id, channel.updated_at, channel.updated_at], id: channel.channel_id) %>
+  <% end %>
 <% end %>
