--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,22 @@
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sul-dlss/component-library@v2025-02-04/styles/sul.css">
+    <%= stylesheet_link_tag 'component_library_overrides' %>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render SulViewComponent::Structure::HeaderComponent.new %>
+    <main id="main-container">
+      <% if content_for?(:fluid_body) %>
+        <div class="fluid-container">
+          <%= yield :fluid_body %>
+        </div>
+      <% end %>
+
+      <div class="container">
+        <%= yield %>
+      </div>
+    </main>
   </body>
 </html>
