--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,6 +1,4 @@
-<div class="d-flex">
-  <%= render SulViewComponent::Elements::HeadingComponent.new(level: :h3, text: 'DLSS Channels', classes: 'mb-4 w-100 text-nowrap') %>
-</div>
+<%= render SulViewComponent::Elements::HeadingComponent.new(level: :h2, text: 'DLSS Accessibility Dashboard', classes: 'mb-4') %>
 
 <%= render SulViewComponent::Elements::Tables::TableComponent.new(
       id: 'channels', label: 'Channels', show_label: false
