--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,21 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sul-dlss/component-library@v2025-02-04/styles/sul.css">
     <%= stylesheet_link_tag 'component_library_overrides' %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <%= render SulViewComponent::Elements::SkipLinksComponent.new %>
     <%= render SulViewComponent::Structure::HeaderComponent.new %>
+    <header>
+      <div class="breadcrumbs">
+        <nav id="breadcrumbs" aria-label="breadcrumb" class="container">
+          <%= yield :breadcrumbs %>
+        </nav>
+      </div>
+    </header>
     <main id="main-container">
       <% if content_for?(:fluid_body) %>
         <div class="fluid-container">
