--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,4 +1,7 @@
-<%= render SulViewComponent::Elements::HeadingComponent.new(level: :h2, text: 'DLSS Accessibility Dashboard', classes: 'mb-4') %>
+<div class="d-flex">
+  <%= render SulViewComponent::Elements::HeadingComponent.new(level: :h2, text: 'DLSS Youtube Channels', classes: 'mb-4 w-100 text-nowrap') %>
+  <%= render SulViewComponent::Elements::ButtonLinkComponent.new(link: new_channel_path, label: 'Add a channel', variant: :primary, classes: 'ml-auto text-nowrap h-50') if allowed_to?(:new?, Channel) %>
+</div>
 
 <%= render SulViewComponent::Elements::Tables::TableComponent.new(
       id: 'channels', label: 'Channels', show_label: false
