--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -22,14 +22,15 @@
       id: 'videos', label: 'Videos', show_label: false, body_classes: 'video_list'
     ) do |component| %>
   <% component.with_header(
-       headers: ['Title', 'Duration', 'Views', 'Captioned'] # , 'ASR Languages', 'Edited Languages']
+       headers: ['Title', 'Duration', 'Views', 'Captioned', 'Updated'] # , 'ASR Languages', 'Edited Languages']
      ) %>
   <% @channel.videos.each do |video| %>
     <% component.with_row(values: [
         link_to(video.title, video_path(video_id: video.video_id)),
         DurationPresenter.new(duration: video.duration).translate,
         video.view_count,
-        video.captioned?
+        video.captioned?,
+        video.updated_at.strftime('%m/%d/%Y')
       ],
       id: video.video_id,
       classes: video.display_class) %>
