--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,8 @@
   </head>
 
   <body>
-    <%= render SulViewComponent::Elements::SkipLinksComponent.new %>
-    <%= render SulViewComponent::Structure::HeaderComponent.new %>
+    <%= render Elements::SkipLinksComponent.new %>
+    <%= render Structure::HeaderComponent.new %>
     <header>
       <div class="breadcrumbs">
         <nav id="breadcrumbs" aria-label="breadcrumb" class="container">
