--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumbs do %>
-  <%= render SulViewComponent::Elements::BreadcrumbNavComponent.new do |component| %>
+  <%= render Elements::BreadcrumbNavComponent.new do |component| %>
     <% component.with_breadcrumb(text: 'Dashboard', link: root_path) %>
     <% if current_page?(action: :new) %>
       <% component.with_breadcrumb(text: 'New Channel') %>
@@ -11,18 +11,22 @@
 
 <div class="d-flex justify-content-between">
   <div>
-    <%= render SulViewComponent::Elements::HeadingComponent.new(level: :h2, text: @channel.title, classes: 'mb-4 d-inline-block') %>
+    <%= render Elements::HeadingComponent.new(level: :h2, text: @channel.title, classes: 'mb-4 d-inline-block') %>
   </div>
   <div class="d-flex justify-content-start">
-    <%= render SulViewComponent::Elements::ButtonLinkComponent.new(link: new_channel_path, label: 'Download Report', variant: :primary, classes: 'mb-4') %>
+    <%= render Elements::ButtonLinkComponent.new(link: new_channel_path, label: 'Download Report', variant: :primary, classes: 'mb-4') %>
   </div>
 </div>
 
-<%= render SulViewComponent::Elements::Tables::TableComponent.new(
+<%= render Elements::Tables::TableComponent.new(
       id: 'videos', label: 'Videos', show_label: false, body_classes: 'video_list'
     ) do |component| %>
-  <% component.with_header(
-       headers: ['Title', 'Duration', 'Views', 'Captioned', 'Updated'] # , 'ASR Languages', 'Edited Languages']
+  <% component.with_headers([
+                             { label: 'Title' },
+                             { label: 'Duration' },
+                             { label: 'Views' },
+                             { label: 'Captioned' },
+                             { label: 'Updated' }]
      ) %>
   <% @channel.videos.each do |video| %>
     <% component.with_row(values: [
@@ -32,7 +36,6 @@
         video.captioned?,
         video.updated_at.strftime('%m/%d/%Y')
       ],
-      id: video.video_id,
-      classes: video.display_class) %>
+      id: video.video_id) %>
   <% end %>
 <% end %>
