--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumbs do %>
-  <%= render SulViewComponent::Elements::BreadcrumbNavComponent.new do |component| %>
+  <%= render Elements::BreadcrumbNavComponent.new do |component| %>
     <% component.with_breadcrumb(text: 'Dashboard', link: root_path) %>
     <% component.with_breadcrumb(text: @video.channel.title, link: channel_path(channel_id: @video.channel.channel_id)) %>
     <% component.with_breadcrumb(text: @video.title, active: true) %>
@@ -8,20 +8,20 @@
 
 <div class="d-flex justify-content-between">
   <div>
-    <%= render SulViewComponent::Elements::HeadingComponent.new(level: :h2, text: @video.title, classes: 'mb-4 d-inline-block') %>
+    <%= render Elements::HeadingComponent.new(level: :h2, text: @video.title, classes: 'mb-4 d-inline-block') %>
   </div>
 </div>
 
-<%= render SulViewComponent::Elements::Tables::TableComponent.new(id: 'details-table', classes: 'mb-5') do |component| %>
-  <% component.with_caption do %><%= render SulViewComponent::Show::TableHeadingComponent.new(text: 'Details & Statistics') %><% end %>
+<%= render Elements::Tables::TableComponent.new(id: 'details-table', classes: 'mb-5') do |component| %>
+  <% component.with_caption do %><%= render Show::TableHeadingComponent.new(text: 'Details & Statistics') %><% end %>
   <% component.with_row(label: 'View Count', values: [@video.view_count]) %>
   <% component.with_row(label: 'Favorite Count', values: [@video.statistics['favoriteCount']]) %>
   <% component.with_row(label: 'Duration', values: [DurationPresenter.new(duration: @video.duration).translate]) %>
   <% component.with_row(label: 'Captioned?', values: [@video.captioned?]) %>
 <% end %>
 
-<%= render SulViewComponent::Elements::Tables::TableComponent.new(id: 'debug-table', classes: 'mb-5') do |component| %>
-  <% component.with_caption do %><%= render SulViewComponent::Show::TableHeadingComponent.new(text: 'Debug') %><% end %>
+<%= render Elements::Tables::TableComponent.new(id: 'debug-table', classes: 'mb-5') do |component| %>
+  <% component.with_caption do %><%= render Show::TableHeadingComponent.new(text: 'Debug') %><% end %>
   <% component.with_row(label: 'Data', values: [@video.video_data]) %>
   <% component.with_row(label: 'Caption data', values: [@video.caption_data]) %>
 <% end %>
