--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -16,3 +16,16 @@
     <% component.with_row(values: [link_to(channel.title, channel_path(channel_id: channel.channel_id)), channel.channel_id, channel.updated_at, link_to_youtube(channel.channel_id)], id: channel.channel_id) %>
   <% end %>
 <% end %>
+
+<%= render Elements::Tables::TableComponent.new(
+      id: 'reports', label: 'Reports', show_label: true
+    ) do |component| %>
+  <% component.with_headers([
+                              { label: 'Channel ID' },
+                              { label: 'Date' },
+                              { label: 'File' }]
+     ) %>
+  <% @reports.each do |report| %>
+    <% component.with_row(values: [report.channel_id, report.created_at, link_to(report.file.filename, rails_blob_path(report.file.blob, disposition: 'attachment'))], id: report.id) %>
+  <% end %>
+<% end %>
