--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -14,8 +14,7 @@
     <%= render Elements::HeadingComponent.new(level: :h2, text: @channel.title, classes: 'mb-4 d-inline-block') %>
   </div>
   <div class="d-flex justify-content-start">
-    <%= render Elements::ButtonLinkComponent.new(link: refresh_channel_path(channel_id: @channel.channel_id), label: 'Refresh Channel', variant: :primary, classes: 'mb-4') %>
-    <%= render Elements::ButtonLinkComponent.new(link: new_channel_path, label: 'Download Report', variant: :primary, classes: 'mb-4') %>
+    <%= render Elements::ButtonLinkComponent.new(link: report_channel_path(channel_id: @channel.channel_id), label: 'Run Report', variant: :primary, classes: 'mb-4') %>
   </div>
 </div>
 
