Update stylelint config

--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -19,7 +19,7 @@
 </div>
 
 <%= render Elements::Tables::TableComponent.new(
-      id: 'videos', label: 'Videos', show_label: false, body_classes: 'video_list'
+      id: 'videos', label: 'Videos', show_label: false, body_classes: 'video-list'
     ) do |component| %>
   <% component.with_headers([
                               { label: 'Title' },
